--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@
 html,
 body {
     overflow-x: hidden;
+    height: 100vh;
+    margin: 0;
 }
 
 header {
@@ -670,12 +672,11 @@ h2 {
 
 footer {
     width: 100vw;
-    height: 10vh;
+    height: 70px;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0px -5px 40px var(--color-grey2);
-    margin-top: auto;
 }
 
 .footer__content {
