--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,22 @@
     box-sizing: border-box;
 }
 
-html,
-body {
-    overflow-x: hidden;
-    height: 100vh;
+html, body {
+    height: 100%;
     margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+body {
+    flex: 1;
+}
+
+section {
+    margin: 0;
+    padding: 0;
+    flex: 1;
 }
 
 header {
@@ -88,10 +99,7 @@ header > .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
-    background-image: url("../assets/Background.png");
-    background-position: bottom;
-    background-repeat: no-repeat;
+    justify-content: center;
 }
 
 h1 {
@@ -129,6 +137,15 @@ h1 {
 
 .opening-section > a:hover {
     cursor: pointer;
+}
+
+.opening-img-container {
+    height: 400px;
+    width: 100vw;
+    margin-top: 40px;
+    background-image: url("../assets/Background.png");
+    background-position: bottom;
+    background-repeat: no-repeat;
 }
 
 .stats {
@@ -188,6 +205,7 @@ h2 {
 .icon3 { top: 8px; left: 28px; position: absolute; }
 
 .about-us__container {
+    height: 100%;
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
@@ -259,11 +277,12 @@ h2 {
 }
 
 .pricing__container {
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 90px 20px;
+    padding: 100px 20px;
     box-sizing: border-box;
 }
 
@@ -672,11 +691,13 @@ h2 {
 
 footer {
     width: 100vw;
-    height: 70px;
+    height: 15vh;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0px -5px 40px var(--color-grey2);
+    position: relative;
+    margin-top: auto;
 }
 
 .footer__content {
@@ -686,6 +707,7 @@ footer {
     margin: 0 137px;
     width: 100%;
     height: 100%;
+    padding: 15px;
 }
 
 .footer__logo {
@@ -752,7 +774,13 @@ footer {
     .opening-section {
         height: auto;
         padding: 50px 20px;
+    }
+
+    .opening-img-container {
         background-image: none;
+        height: unset;
+        width: unset;
+        margin: 0;
     }
 
     h1 {
@@ -770,8 +798,11 @@ footer {
         gap: 30px;
     }
 
-    .opening-section {
+    .opening-img-container {
         background-image: none;
+        height: unset;
+        width: unset;
+        margin: 0;
     }
 
     .stats__container {
@@ -830,7 +861,13 @@ footer {
     .opening-section {
         padding: 50px 20px;
         text-align: center;
+    }
+
+    .opening-img-container {
         background-image: none;
+        height: unset;
+        width: unset;
+        margin: 0;
     }
 
     h1 {
@@ -922,7 +959,13 @@ footer {
 
     .opening-section {
         padding: 30px 15px;
+    }
+
+    .opening-img-container {
         background-image: none;
+        height: unset;
+        width: unset;
+        margin: 0;
     }
 
     .opening-section > p {
